--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<html>
+  <head>
+    <title>Проекты</title>
+    <style>
+      body {
+        color: gray;
+        text-align: center;
+      }
+      
+      div {
+        
+      }
+    <style>
+  </head>
+  <body>
+      <div>
+        <span>Проекты:</span>
+      </div>
+      <div>
+        <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Ростов-на-Дону</a></span>
+      </div>
+  </body>
+</html>
