--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
       div {
         
       }
-    <style>
+    </style>
   </head>
   <body>
       <div>
         <span>Проекты:</span>
       </div>
       <div>
-        <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Ростов-на-Дону</a></span>
+        <span><a href="https://dmotovilin.github.io/bogorodica/">Слайдер икон Богородицы</a></span>
+        <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Храмы Ростова-на-Дону</a></span>
       </div>
   </body>
 </html>
