--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       body {
         color: gray;
         text-align: center;
-        font-size: 32;
+        font-size: 48;
+        clear: both;
       }
       
       div {
@@ -20,6 +21,7 @@
       <div>
         <span><a href="https://dmotovilin.github.io/bogorodica/">Слайдер икон Богородицы</a></span>
         <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Храмы Ростова-на-Дону</a></span>
+        <span><a href="https://dmotovilin.github.io/bogorodica-opacity/">прозрачность</a></span>
       </div>
   </body>
 </html>
