--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
       </div>
       <div>
         <span><a href="https://dmotovilin.github.io/bogorodica/">Слайдер икон Богородицы</a></span>
+      </div>
+      <div>
         <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Храмы Ростова-на-Дону</a></span>
+      </div>
+      <div>
         <span><a href="https://dmotovilin.github.io/bogorodica-opacity/">прозрачность</a></span>
       </div>
   </body>
