--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         <span><a href="https://dmotovilin.github.io/bogorodica/">Слайдер икон Богородицы</a></span>
       </div>
       <div>
-        <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Храмы Ростова-на-Дону</a></span>
+        <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Храмы Ростова-на-Дону в честь икон Богородицы</a></span>
       </div>
       <div>
         <span><a href="https://dmotovilin.github.io/bogorodica-opacity/">прозрачность</a></span>
+      </div>
+      <div>
+        <span><a href="https://dmotovilin.github.io/psaltyrb/">Псалтырь</a></span>
       </div>
   </body>
 </html>
