--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <span><a href="https://dmotovilin.github.io/bogorodica/">Слайдер икон Богородицы</a></span>
       </div>
       <div>
+        <span><a href="https://dmotovilin.github.io/bogorodica-umilenie/">Икона Богородицы "Умиление"</a></span>
+      </div>
+      <div>
         <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Храмы Ростова-на-Дону в честь икон Богородицы</a></span>
       </div>
       <div>
