--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <span><a href="https://dmotovilin.github.io/bogorodica-umilenie/">Икона Богородицы "Умиление"</a></span>
       </div>
       <div>
-        <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Храмы Ростова-на-Дону в честь икон Богородицы</a></span>
+        <span><a href="https://dmotovilin.github.io/bogorodica-RostovOnDon/">Слайдер икон Богородицы с ссылками на храмы Ростова-на-Дону в честь икон Богородицы</a></span>
       </div>
       <div>
         <span><a href="https://dmotovilin.github.io/bogorodica-opacity/">прозрачность</a></span>
