--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
       <div>
         <span><a href="https://dmotovilin.github.io/psaltyrb/">Псалтырь</a></span>
       </div>
+      <div>
+        <span><a href="https://dmotovilin.github.io/blog"></a></span>
+      </div>
   </body>
 </html>
