--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span><a href="https://dmotovilin.github.io/psaltyrb/">Псалтырь</a></span>
       </div>
       <div>
-        <span><a href="https://dmotovilin.github.io/blog"></a></span>
+        <span><a href="https://dmotovilin.github.io/blog">блог</a></span>
       </div>
   </body>
 </html>
