--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <span><a href="https://dmotovilin.github.io/bogorodica/">Слайдер икон Богородицы</a></span>
       </div>
       <div>
+        <span><a href="https://dmotovilin.github.io/bogorodica-kalendar/">Календарь икон Богородицы</a></span>  
+      </div>
+      <div>
+        <span><a href="https://dmotovilin.github.io/bogorodicy-kalendar">Календарь икон Богородицы</a></span>  
+      </div>
+      <div>
         <span><a href="https://dmotovilin.github.io/bogorodica-umilenie/">Икона Богородицы "Умиление"</a></span>
       </div>
       <div>
