--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
       <div>
         <span><a href="https://dmotovilin.github.io/blog">блог</a></span>
       </div>
+      <div>
+        <span><a href="https://dmotovilin.github.io/rastenievodstvo/">Растениеводство</a></span>
+      </div>
   </body>
 </html>
